# seed-to-tale

./: README.md  pyproject.toml
babel_bitcoin_password_decrypter/: cli.py  converter.py  story.py
seed_to_tale/: __init__.py  babel_lib.py  bip39.py  cli.py  converter.py  syllables.py
