[project]
name = "seed-to-tale"
version = "0.1.0"
description = "Convert BIP39 seed phrases to memorable stories"
authors = [
    {name = "klsoen"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
seed-to-tale = "seed_to_tale.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
